--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,18 +19,18 @@ p {
 
 button {
   background-color: transparent;
-  border: 2px solid steelblue;
-  color: steelblue;
+  border: 2px solid #226a27;
+  color: #226a27;
   font-size: 1rem;
   font-family: inherit;
-  max-width: 100px;
+  max-width: 200px;
   padding: 0.5rem 0.5rem;
 }
 
 button:hover {
   cursor: pointer;
   color: white;
-  background-color: steelblue;
+  background-color: #226a27;
 }
 
 .container {
