--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,3 +56,11 @@ button:hover {
   padding: 3px 7px;
   font-size: 17px;
 }
+
+.section-header {
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 1.5rem 0rem 0.5rem 0rem;
+}
