--- a/frontend/src/components/RaceComponents/CreateRaceLegForm/CreateRaceLegForm.css
+++ b/frontend/src/components/RaceComponents/CreateRaceLegForm/CreateRaceLegForm.css
@@ -1,26 +1,17 @@
-.race-form {
+.leg-form {
     display: grid;
     grid-template-columns: repeat(2, 200px);
     gap: 0.25rem;
     margin: 0.5rem 0rem;
 }
 
-.form-field {
-    padding: 0.1rem;
-    border: 1px solid #226a27;
-}
-
-.form-container {
+.leg-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form-button {
-    margin: 0rem 0.5rem;
+.leg-form-button {
+    margin: 0.25rem 0.5rem;
     padding: 0.5rem 1rem;
-}
-
-.button-container {
-    margin: 0.25rem 0rem;
 }
