--- a/frontend/src/components/RaceComponents/RaceLegsList/RaceLegsList.css
+++ b/frontend/src/components/RaceComponents/RaceLegsList/RaceLegsList.css
@@ -1,14 +1,14 @@
-.race-table {
+.leg-table {
     text-align: left;
     border: 1px solid #226a27;
     border-collapse: collapse;
     table-layout: auto;
-    width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.race-element {
+.leg-element {
     border-bottom: 1px solid #226a27;
     padding: 0.5rem;
 }
