--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -14,6 +14,10 @@ li {
   color: white;
   margin-bottom: 2rem;
   padding-top: 1rem;
+  top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
 
 .navBar button {
